RESOLVED FIXED170030
SVG animations are not paused when their <svg> element is removed from the document
https://bugs.webkit.org/show_bug.cgi?id=170030
Summary SVG animations are not paused when their <svg> element is removed from the do...
Chris Dumez
Reported 2017-03-23 15:52:30 PDT
SVG animations are not paused when their <svg> element is removed from the document.
Attachments
Patch (5.80 KB, patch)
2017-03-23 16:05 PDT, Chris Dumez
no flags
Patch (5.79 KB, patch)
2017-03-23 16:50 PDT, Chris Dumez
no flags
Radar WebKit Bug Importer
Comment 1 2017-03-23 15:53:01 PDT
Chris Dumez
Comment 2 2017-03-23 16:05:54 PDT
Dean Jackson
Comment 3 2017-03-23 16:41:31 PDT
Comment on attachment 305236 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=305236&action=review > LayoutTests/svg/animations/animations-paused-when-removed-from-document.html:11 > + svgElement = document.getElementsByTagName("svg")[0]; I use document.querySelector("svg") to avoid having to get [0]
Chris Dumez
Comment 4 2017-03-23 16:50:08 PDT
Chris Dumez
Comment 5 2017-03-23 16:51:25 PDT
Comment on attachment 305245 [details] Patch Clearing flags on attachment: 305245 Committed r214327: <http://trac.webkit.org/changeset/214327>
Chris Dumez
Comment 6 2017-03-23 16:51:29 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.