SVG animations are not paused when their <svg> element is removed from the document https://bugs.webkit.org/show_bug.cgi?id=170030 <rdar://problem/31230252>

Reviewed by Dean Jackson.

Source/WebCore:

SVG animations were not paused when their <svg> element was removed from the document.
This patch fixes the issue.

Test: svg/animations/animations-paused-when-removed-from-document.html

* svg/SVGSVGElement.cpp:
(WebCore::SVGSVGElement::insertedInto):
(WebCore::SVGSVGElement::removedFrom):

LayoutTests:

Add layout test coverage.

* svg/animations/animations-paused-when-removed-from-document-expected.txt: Added.
* svg/animations/animations-paused-when-removed-from-document.html: Added.

Canonical link: https://commits.webkit.org/186952@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@214327 268f45cc-cd09-0410-ab3c-d52691b4dbfc