Source/WebCore/svg/SVGSVGElement.cpp
@@ -469,6 +469,8 @@ Node::InsertionNotificationRequest SVGSVGElement::insertedInto(ContainerNode& ro
 {
     if (rootParent.isConnected()) {
         document().accessSVGExtensions().addTimeContainer(this);
+        if (!document().accessSVGExtensions().areAnimationsPaused())
+            unpauseAnimations();
 
         // Animations are started at the end of document parsing and after firing the load event,
         // but if we miss that train (deferred programmatic element insertion for example) we need
@@ -481,8 +483,10 @@ Node::InsertionNotificationRequest SVGSVGElement::insertedInto(ContainerNode& ro
 
 void SVGSVGElement::removedFrom(ContainerNode& rootParent)
 {
-    if (rootParent.isConnected())
+    if (rootParent.isConnected()) {
         document().accessSVGExtensions().removeTimeContainer(this);
+        pauseAnimations();
+    }
     SVGGraphicsElement::removedFrom(rootParent);
 }
 
